2001-04-10  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS):  Re-enable logging to
	`config.log' from `config.status', but delay logging till after
	command line option processing.

2001-04-10  Lars J. Aas  <larsa@sim.no>

	* autoupdate.in (print_usage): print "\ at end of line does not
	work as expected, so change block to here-doc instead.
	(print_version): Same.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Replace all tab characters with (8) spaces,
	lest the formatting of example code, etcetera, be messed up.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Rephrase various parts for clarity, felicity,
	and/or grammar.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Clean up cache documentation: Document
	--config-cache/-C option, and recommend instead of --cache-file.
	Indent example AC_CACHE_VAL macros for clarity.  Add new
	"Cache Checkpointing" section for AC_CACHE_SAVE (and
	AC_CACHE_LOAD), so that the "Cache Files" section focuses solely
	on features visible to end-users (e.g. to better fit the cross
	references).  Various minor rewordings for clarity, felicity,
	and/or grammar.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* doc/autoconf.texi: Revert to "configure.in" in the history, since
	"configure.ac" wasn't used in the past, and in any case it is
	probably a good idea to preserve this section verbatim.

2001-04-09  Steven G. Johnson  <stevenj@alum.mit.edu>

	* AUTHORS: Fix grammar.

2001-04-09  Lars J. Aas  <larsa@sim.no>

	* Makefile.am: Manual addition of @PACKAGE@ substitution variable
	needed by dist rules.  Added explanatory comment.
	Problem reported and comment suggested by Raja R Harinath.  

2001-04-06  Lars J. Aas  <larsa@sim.no>

	* Makefile.am: Manual addition of @VERSION@ substitution variable
	as a temporary Automake fix.  Reported by Raja R Harinath.

2001-04-04  Lars J. Aas  <larsa@sim.no>
