@@ -1,5 +1,11 @@
 2001-04-10  Lars J. Aas  <larsa@sim.no>
 
+	* Makefile.am: AC_SUBST fixes for PACKAGE_NAME, VERSION, PACKAGE...
+	* configure.in: Moved here.
+	Suggested by Akim Demaille and Raja R Harinath.  
+
+2001-04-10  Lars J. Aas  <larsa@sim.no>
+
 	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS):  Re-enable logging to
 	`config.log' from `config.status', but delay logging till after
 	command line option processing.
